--- a/deployment/sandbox-v2/playbooks/mosip_env.yml
+++ b/deployment/sandbox-v2/playbooks/mosip_env.yml
@@ -5,7 +5,7 @@
   vars: 
     kube_config: '{{mz_kube_config}}'  
   tasks:
-    - {name: 'Create folder', file: {name: '{{postgres_local_storage_path}}', state: directory}}
+    - {name: 'Create folder', file: {name: '{{postgres.local_storage_path}}', state: directory}}
 
 - hosts: console
   gather_facts: true
@@ -13,12 +13,11 @@
     kube_config: '{{mz_kube_config}}'  # Deploy all these on mz cluster
   roles:
      # Base MOSIP infra
-     - {role: postgres/postgres, tags: [postgres, infra]}
-     - {role: keycloak/keycloak, tags: [keycloak, infra]}
-     - {role: hdfs, tags: [hdfs, infra]} # 
-     - {role: clamav, tags: [clamav, infra]} # 
-     - {role: activemq, tags: [activemq, infra]} # 
-     - {role: ingress/mz-ingress, tags: [mz-ingress, infra]}
-     - {role: postgres/postgres-init, tags: [postgres-init, infra]} # Start only after ingress is installed 
-     - {role: keycloak/keycloak-init, tags: [keycloak-init, infra]}  
+     - {role: helm, install_name: 'postgres', helm_chart: '{{charts_root}}/postgres', tags: [postgres]}
+     - {role: helm, install_name: 'keycloak', helm_chart: '{{charts_root}}/keycloak', tags: [keycloak]}
+     - {role: hdfs, tags: [hdfs]} # 
+     - {role: clamav, tags: [clamav]} # 
+     - {role: activemq, tags: [activemq]} # 
+     - {role: postgres/postgres-init, tags: [postgres-init]} 
+     - {role: keycloak/keycloak-init, tags: [keycloak-init]}  
 
