--- a/deployment/sandbox-v2/roles/keycloak-init/tasks/get_role_info.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/tasks/get_role_info.yml
@@ -2,7 +2,7 @@
 # Returns kc_role_info
 - name: 'Get roles of realm {{kc_realm_id}}'
   uri:
-    url: '{{keycloak_url}}/auth/admin/realms/{{kc_realm_id}}/roles/{{kc_role_name}}'
+    url: '{{keycloak.url}}/auth/admin/realms/{{kc_realm_id}}/roles/{{kc_role_name}}'
     method: GET 
     remote_src: 'no'
     status_code:
