--- a/deployment/sandbox-v2/roles/keycloak-init/tasks/get_admin_token.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/tasks/get_admin_token.yml
@@ -1,11 +1,11 @@
 - name: Get admin token
   uri:
-    url: "{{keycloak_url}}/auth/realms/master/protocol/openid-connect/token"
+    url: "{{keycloak.url}}/auth/realms/master/protocol/openid-connect/token"
     method: POST
     body_format: form-urlencoded
     body:
-      username: '{{keycloak_user}}'
-      password: '{{keycloak_password}}' 
+      username: '{{keycloak.user}}'
+      password: '{{keycloak.password}}' 
       grant_type: "password"
       client_id: "admin-cli"
   register: keycloak_token
