--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -1,13 +1,13 @@
 # Master playbook
 #
 
-#- {import_playbook: playbooks/cluster.yml, vars: {cluster: mzcluster, master: mzmaster, workers: mzworkers}}
-#- {import_playbook: playbooks/cluster.yml, vars: {cluster: dmzcluster, master: dmzmaster, workers: dmzworkers}}
-#- import_playbook: playbooks/console.yml  # Basic setup on console machine
-- import_playbook: playbooks/mosip_env.yml # MOSIP DB, Keycloak, hdfs etc.
-#- import_playbook: playbooks/config-server.yml    
-#- import_playbook: playbooks/mosip_kernel.yml
-#- import_playbook: playbooks/mosip_prereg.yml
-#- import_playbook: playbooks/mosip_regprc.yml
-#- import_playbook: playbooks/nginx.yml
+- {import_playbook: playbooks/cluster.yml, vars: {cluster: mzcluster, master: mzmaster, workers: mzworkers}}
+- {import_playbook: playbooks/cluster.yml, vars: {cluster: dmzcluster, master: dmzmaster, workers: dmzworkers}}
+- import_playbook: playbooks/console.yml  # Basic setup on console machine
+- import_playbook: playbooks/env.yml # MOSIP DB, Keycloak, hdfs etc.
+- import_playbook: playbooks/config-server.yml    
+- import_playbook: playbooks/kernel.yml
+- import_playbook: playbooks/prereg.yml
+#- import_playbook: playbooks/regproc.yml
+- import_playbook: playbooks/nginx.yml
 
