--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -3,6 +3,9 @@
 # Global variables - accessed by different roles and plays
 #
 
+sandbox_domain_name: test-sandbox.southindia.cloudapp.azure.com
+sandbox_public_url: 'https://{{sandbox_domain_name}}'
+
 install_root: /home/mosipuser/mosip-infra/deployment/sandbox-v2
 charts_root: '{{install_root}}/helm/charts'  # Helm charts root
 
@@ -28,17 +31,15 @@ mzingress:
   nodeport_https: 30443
   base_url: 'http://{{mz_cluster_any_node}}:30080' # Same as nodeport_http
 
-
-sandbox_domain_name: test-sandbox.southindia.cloudapp.azure.com
-sandbox_public_url: 'https://{{sandbox_domain_name}}'
-
 mz_persistent_storage_node: mzworker0  # All persistent data in MZ will be stored on this node. TODO: this should match helm
 
 # Registration processor shared variables
-regproc_landing_folder: /mnt/regproc/landing 
-regproc_landing_hostname: dmzworker0  # Should be same one used in creating these folders (see regproc.yml) 
-regproc_archival_folder: /mnt/regproc/archival
-regproc_archival_hostname: dmzworker0
+#
+regproc:
+  landing_folder: /mnt/regproc/landing 
+  landing_hostname: dmzworker0  # Should be same one used in creating these folders (see regproc.yml) 
+  archival_folder: /mnt/regproc/archival
+  archival_hostname: dmzworker0
 
 # Postgres persistent storage
 postgres:
