[MOSIP-1124] Rest of kernel services added.

--- a/deployment/sandbox-v2/helm/charts/kernel/templates/ingress-file.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/ingress-file.yaml
@@ -11,9 +11,11 @@ spec:
   - http:
       paths:
       {{- range $index, $service := .Values.services }}
+        {{ if $service.ingressPath }}
       - path: {{ $service.ingressPath }} 
         backend:
           serviceName: {{ $service.serviceName }}
           servicePort: {{ $service.servicePort }} 
+        {{ end }}
       {{- end }}
 
