--- a/deployment/sandbox-v2/helm/charts/config-server/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/config-server/values.yaml
@@ -8,7 +8,7 @@ gitRepoName: config_repo
 repoUri: /var/lib/config_repo  # repoMountPath + gitRepoName
 containerPort: 51000
 pvName: config-server-local-storage
-pvHostname: mzworker0  #  ANSIBLE filled 
+pvHostname: mzworker0  
 pvcName: config-repo-pv-claim
 pvcSize: 10Mi # Should not exceed pv size
 pvSize: 10Mi
