--- a/deployment/sandbox-v2/helm/charts/postgres/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/postgres/values.yaml
@@ -7,7 +7,7 @@ user: postgres
 containerPort: 5432
 localStorageName: postgres-local-storage
 localStoragePath: /mnt/mosip_data/postgres  # Assumed that an empty directory is created beforehand
-localStorageHostname: mzworker0 # ANSIBLE filled 
+localStorageHostname: mzworker0 
 pvcName: postgres-pvc
 pvName: postgres-pv
 dockerImage: postgres
