[MOSIP-1124] Bug in keycloak front end url fixed.

--- a/deployment/sandbox-v2/helm/charts/keycloak/templates/keycloak-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/keycloak/templates/keycloak-dep.yaml
@@ -41,7 +41,7 @@ spec:
         - name: DB_PASSWORD
           value: {{ .Values.postgresPassword }} 
         - name: KEYCLOAK_FRONTEND_URL
-          value: "{{ .Values.keycloakExternalUrl }}" 
+          value: {{ tpl .Values.keycloakExternalUrl . }}  # Template of template! See values.yaml
         ports:
         - containerPort: {{ .Values.containerPort }} 
         readinessProbe:
