--- a/deployment/sandbox-v2/helm/charts/prereg/templates/login-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/login-dep.yaml
@@ -41,5 +41,15 @@ spec:
         ports:
         - containerPort: {{ .Values.services.login.containerPort }}
         readinessProbe:
-          tcpSocket:
-            port: {{ .Values.services.login.containerPort }}
+          httpGet:
+            path: {{ .Values.services.login.healthUrl }} 
+            port: {{ .Values.services.login.containerPort }} 
+          initialDelaySeconds: {{ .Values.probe.initialDely }} 
+          periodSeconds: {{ .Values.probe.periodSeconds }} 
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.login.healthUrl }} 
+            port: {{ .Values.services.login.containerPort }} 
+          initialDelaySeconds: {{ .Values.probe.initialDely }} 
+          periodSeconds: {{ .Values.probe.periodSeconds }} 
+          
