--- a/deployment/sandbox-v2/helm/charts/prereg/templates/batch-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/batch-dep.yaml
@@ -40,6 +40,13 @@ spec:
           value: absent
         ports:
         - containerPort: {{ .Values.services.batch.containerPort }}
-        readinessProbe:
+        readinessProbe:  #TODO: Since no actuator, we watch tcp port. Is there an actuator?
           tcpSocket:
             port: {{ .Values.services.batch.containerPort }}
+          initialDelaySeconds: {{ .Values.probe.initialDely }} 
+          periodSeconds: {{ .Values.probe.periodSeconds }} 
+        livenessProbe:
+          tcpSocket:
+            port: {{ .Values.services.batch.containerPort }}
+          initialDelaySeconds: {{ .Values.probe.initialDely }} 
+          periodSeconds: {{ .Values.probe.periodSeconds }} 
