--- a/deployment/sandbox-v2/helm/charts/prereg/templates/document-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/document-dep.yaml
@@ -41,5 +41,14 @@ spec:
         ports:
         - containerPort: {{ .Values.services.document.containerPort }}
         readinessProbe:
-          tcpSocket:
+          httpGet:
+            path: {{ .Values.services.document.healthUrl }}
             port: {{ .Values.services.document.containerPort }}
+          initialDelaySeconds: {{ .Values.probe.initialDely }} 
+          periodSeconds: {{ .Values.probe.periodSeconds }} 
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.document.healthUrl }}
+            port: {{ .Values.services.document.containerPort }}
+          initialDelaySeconds: {{ .Values.probe.initialDely }} 
+          periodSeconds: {{ .Values.probe.periodSeconds }} 
