--- a/deployment/sandbox-v2/helm/charts/kernel/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/values.yaml
@@ -8,6 +8,9 @@ configServerUrl: http://config-server/config
 ingress:
    namespace: default
 artifactoryUrl: http://13.71.87.138:8040
+probe:
+  initialDelay: 30  # Seconds
+  period: 30 # Seconds
 services:
   auth:
     serviceName: kernel-auth-service 
@@ -16,13 +19,15 @@ services:
     containerPort: 8091
     servicePort: 80
     ingressPath: /v1/authmanager
+    healthUrl: /v1/authmanager/actuator/health
   masterdata:
     serviceName: kernel-masterdata-service 
     dockerImage: mosipid/kernel-masterdata-service
     dockerTag: 1.0.7
     containerPort: 8086
     servicePort: 80
-    ingressPath: /v1/authmanager
+    ingressPath: /v1/masterdata
+    healthUrl: /v1/masterdata/actuator/health
   applicant:
     serviceName: kernel-applicanttype-service 
     dockerImage: mosipid/kernel-applicanttype-service
@@ -30,6 +35,7 @@ services:
     containerPort: 8094
     servicePort: 80
     ingressPath: /v1/applicanttype
+    healthUrl: /v1/applicanttype/actuator/health
   email:
     serviceName: kernel-emailnotification-service 
     dockerImage: mosipid/kernel-emailnotification-service
@@ -37,6 +43,7 @@ services:
     containerPort: 8083
     servicePort: 80
     ingressPath: ''
+    healthUrl: /v1/emailnotifier/actuator/health
   prid:
     serviceName: kernel-pridgenerator-service 
     dockerImage: mosipid/kernel-pridgenerator-service
@@ -44,6 +51,7 @@ services:
     containerPort: 8100
     servicePort: 80
     ingressPath: ''
+    healthUrl: /v1/pridgenerator/actuator/health
   sig:
     serviceName: kernel-signature-service 
     dockerImage: mosipid/kernel-signature-service
@@ -51,6 +59,7 @@ services:
     containerPort: 8092
     servicePort: 80
     ingressPath: /v1/signature
+    healthUrl: /v1/signature/actuator/health
   sync:
     serviceName: kernel-syncdata-service 
     dockerImage: mosipid/kernel-syncdata-service
@@ -58,6 +67,7 @@ services:
     containerPort: 8089
     servicePort: 80
     ingressPath: ''
+    healthUrl: /v1/syncdata/actuator/health
   uin:
     serviceName: kernel-uingenerator-service 
     dockerImage: mosipid/kernel-uingenerator-service
@@ -65,6 +75,7 @@ services:
     containerPort: 8080
     servicePort: 80
     ingressPath: ''
+    healthUrl: /v1/uingenerator/actuator/health
   audit:
     serviceName: kernel-auditmanager-service 
     dockerImage: mosipid/kernel-auditmanager-service
@@ -72,6 +83,7 @@ services:
     containerPort: 8081
     servicePort: 80
     ingressPath: /v1/auditmanager
+    healthUrl: /v1/auditmanager/actuator/health
   crypto:
     serviceName: kernel-cryptomanager-service 
     dockerImage: mosipid/kernel-cryptomanager-service
@@ -79,6 +91,7 @@ services:
     containerPort: 8087
     servicePort: 80
     ingressPath: /v1/cryptomanager
+    healthUrl: /v1/cryptomanager/actuator/health
   key:
     serviceName: kernel-keymanager-service 
     dockerImage: mosipid/kernel-keymanager-service
@@ -86,6 +99,7 @@ services:
     containerPort: 8088
     servicePort: 80
     ingressPath: /v1/keymanager
+    healthUrl: /v1/keymanager/actuator/health
   otp:
     serviceName: kernel-otpmanager-service 
     dockerImage: mosipid/kernel-otpmanager-service
@@ -93,6 +107,7 @@ services:
     containerPort: 8085
     servicePort: 80
     ingressPath: ''
+    healthUrl: /v1/otpmanager/actuator/health
   rid:
     serviceName: kernel-ridgenerator-service 
     dockerImage: mosipid/kernel-ridgenerator-service
@@ -100,6 +115,7 @@ services:
     containerPort: 8096
     servicePort: 80
     ingressPath: '' 
+    healthUrl: /v1/ridgenerator/actuator/health
   sms:
     serviceName: kernel-smsnotification-service 
     dockerImage: mosipid/kernel-smsnotification-service
@@ -107,6 +123,7 @@ services:
     containerPort: 8084
     servicePort: 80
     ingressPath: ''
+    healthUrl: /v1/smsnotifier/actuator/health
   token:
     serviceName: kernel-tokenidgenerator-service 
     dockerImage: mosipid/kernel-tokenidgenerator-service
@@ -114,6 +131,7 @@ services:
     containerPort: 8097
     servicePort: 80
     ingressPath: ''
+    healthUrl: /v1/tokenidgenerator/actuator/health
   vid:
     serviceName: kernel-vidgenerator-service 
     dockerImage: mosipid/kernel-vidgenerator-service
@@ -121,4 +139,5 @@ services:
     containerPort: 8099
     servicePort: 80
     ingressPath: ''
+    healthUrl: /v1/vidgenerator/actuator/health
 
