--- a/deployment/sandbox-v2/helm/charts/kernel/templates/uin-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/uin-dep.yaml
@@ -42,5 +42,14 @@ spec:
         ports:
         - containerPort: {{ .Values.services.uin.containerPort }}
         readinessProbe:
-          tcpSocket:
-            port: {{ .Values.services.uin.containerPort }}
+          httpGet:
+            path: {{ .Values.services.uin.healthUrl }} 
+            port: {{ .Values.services.uin.containerPort }} 
+          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+          periodSeconds: {{ .Values.probe.period }} 
+        livenessProbe:
+          httpGet:
+            path: {{ .Values.services.uin.healthUrl }} 
+            port: {{ .Values.services.uin.containerPort }} 
+          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+          periodSeconds: {{ .Values.probe.period }}
