--- a/deployment/sandbox-v2/helm/charts/kernel/templates/vid-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/kernel/templates/vid-dep.yaml
@@ -40,6 +40,13 @@ spec:
           value: absent
         ports:
         - containerPort: {{ .Values.services.vid.containerPort }}
-        readinessProbe:
+        readinessProbe:  #TODO: Since no actuator, we watch tcp port. Is there an actuator?
           tcpSocket:
             port: {{ .Values.services.vid.containerPort }}
+          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+          periodSeconds: {{ .Values.probe.period }} 
+        livenessProbe:
+          tcpSocket:
+            port: {{ .Values.services.vid.containerPort }}
+          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+          periodSeconds: {{ .Values.probe.period }} 
