--- a/deployment/sandbox-v2/helm/charts/prereg/templates/transliteration-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/transliteration-dep.yaml
@@ -44,11 +44,11 @@ spec:
           httpGet:
             path: {{ .Values.services.transliteration.healthUrl }}
             port: {{ .Values.services.transliteration.containerPort }}
-          initialDelaySeconds: {{ .Values.probe.initialDely }} 
-          periodSeconds: {{ .Values.probe.periodSeconds }} 
+          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+          periodSeconds: {{ .Values.probe.period }} 
         livenessProbe:
           httpGet:
             path: {{ .Values.services.transliteration.healthUrl }}
             port: {{ .Values.services.transliteration.containerPort }}
-          initialDelaySeconds: {{ .Values.probe.initialDely }} 
-          periodSeconds: {{ .Values.probe.periodSeconds }} 
+          initialDelaySeconds: {{ .Values.probe.initialDelay }} 
+          periodSeconds: {{ .Values.probe.period }} 
