--- a/deployment/sandbox-v2/helm/charts/prereg/values.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/values.yaml
@@ -7,7 +7,7 @@ configServerUrl: http://config-server/config
 sandboxDomainName: test-sandbox.southindia.cloudapp.azure.com
 probe:
   initialDelay: 30  # Seconds
-  periodDelay: 30 # Seconds
+  period: 30 # Seconds
 ingress:
    namespace: default
 artifactoryUrl: http://13.71.87.138:8040
